--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,6 +13,7 @@ h1 {
   margin:0 0 15px 0;
   font-size:50px;
   letter-spacing:-5px; color:#fff;
+  text-shadow:0px 2px 2px #000;
 }
 
 h1 > strong {
@@ -23,6 +24,7 @@ p {
   margin:0 0 15px 0;
   font-size:25px; font-weight:bold;
   letter-spacing:-1px; line-height:27px; color:#6ca1d5;
+  text-shadow:0px 1px 1px #000;
 }
 
 nav {
@@ -44,6 +46,7 @@ nav > ul > li > a {
   font-weight:bold;
   text-transform:lowercase; text-decoration:none;
   color:#6ca1d5;
+  text-shadow:0px 1px 1px #000;
 }
 
 nav > ul > li > a:hover {
