--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -49,7 +49,8 @@ nav > ul > li > a {
   text-shadow:0px 1px 1px #000;
 }
 
-nav > ul > li > a:hover {
+nav > ul > li > a:hover,
+nav > ul > li > a.actived {
   color:#fff;
 }
 
